build/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-cluster-namespace
  labels:
    name: hello-cluster-namespace
