build/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: hello-cluster-namespace
spec:
  selector:
    app: api-app-label
  ports:
    - protocol: TCP
      port: 41010
      targetPort: 41010
