build/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: hello-cluster-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: hello-cluster.ie
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 41010
